yv-1531 fix video descriptions, flash mobile msging display, share modal

--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -41,7 +41,7 @@
 
       %div.fb-like{"data-href" => "#{request.protocol}#{request.host_with_port}#{request.fullpath}", "data-send" => "false", "data-layout" => "button_count", "data-width" => "450", "data-show-faces" => "false"}
 
-      %div
+      %div.gplus
         %g:plusone{size: "medium"}
         :javascript
           var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
