--- a/app/assets/stylesheets/_modal_window.sass
+++ b/app/assets/stylesheets/_modal_window.sass
@@ -17,13 +17,16 @@
   +box-shadow(rgba(#000, 0.75) 0 0px 20px 0)
   background: #bfbec1 image-url("modal_window.png")
   border: none
-  overflow: hidden
+  overflow: visible
   text-shadow: rgba(#fff, 0.7) 0 1px 0
   position: fixed
   top: 50%
   left: 50%
   z-index: 7
   width: 900px
+
+  .gplus
+    margin-top: 10px
 
   header
     +box-shadow(inset rgba(#fff, 0.1) 0 1px 0 0, rgba(#000, 0.5) 0 2px 5px 0)
