--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -35,10 +35,10 @@ br + textarea
     position: right bottom
   border: 1px solid
   font-size: 16px
-  margin: 0 0 10px 70px
+  margin: 47px 0 0
   padding: 10px 20px
   box-sizing: border-box
-  width: 910px
+  width: 100%
   opacity: 0.95
   z-index: 5
   text-shadow: #fff 0 1px 0
