YV-2132 fix plan.copyright to use html content before text content if available for current locale

--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -31,6 +31,6 @@
     - else
       = render partial: "/plans/button", locals: {plan: @plan}
 
-    %p.mute= @plan.copyright
+    %p.mute= @plan.copyright.html_safe
     - unless @plan.publisher_url.nil?
       = link_to(t("plans.about publisher"), @plan.publisher_url)
