YV-2378 allow square style avatar for system moment

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -388,6 +388,15 @@ body.transition .moment
     width: 48px
     +border-radius(48px)
 
+.moment-avatar.square
+  +border-radius(0)
+  box-shadow: none
+
+  img
+    height: 48px
+    width: 48px
+    +border-radius(0)
+
 .timeline-avatar
   +border-radius(30px)
   padding: 3px
