Added a wee gradient to the header so it looked pretty when things scrolled under it

--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -22,7 +22,7 @@
   top: 0
   width: 980px
   z-index: 6
-  background-color: #dedddb
+  background: image-url("hdr-grad.png") repeat-x  left top
 
 #header
   +round
