Ugly Green Begone

--- a/app/assets/stylesheets/_retina.scss
+++ b/app/assets/stylesheets/_retina.scss
@@ -181,7 +181,7 @@ only screen and (                min-resolution: 2dppx) {
     }
 
     .profile-hdr-friend {
-      background: image-url("icon-check-white@2x.png") no-repeat 10px 8px #51652f;
+      background: image-url("icon-check-white@2x.png") no-repeat 10px 8px #6ab750;
       background-size: 15px 14px;
     }
 
