--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -96,7 +96,7 @@
     font-weight: bold
     border-radius: 4px
     padding-left: 30px
-    background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
+    background: image-url("icon-check-white.png") no-repeat 10px 8px #6ab750
 
   .profile-hdr-pending
     background-color: #888
