--- a/app/assets/stylesheets/mobile/_users.sass
+++ b/app/assets/stylesheets/mobile/_users.sass
@@ -112,7 +112,7 @@
     font-weight: bold
     border-radius: 4px
     padding: 6px 10px 7px 30px
-    background: image-url("icon-check-white.png") no-repeat 10px 11px #51652f
+    background: image-url("icon-check-white.png") no-repeat 10px 11px #6ab750
     position: absolute
     right: 20px
     top: 22px
