--- a/app/views/notifications/edit.html.haml
+++ b/app/views/notifications/edit.html.haml
@@ -1,6 +1,7 @@
 :ruby
   settings = {
     "moments"       => t('users.notifications.moments'),
+    "contact_joins"  => t('users.notifications.contact_joins'),
     "comments"      => t('users.notifications.comments'),
     "likes"         => t('users.notifications.likes'),
     "friendships"   => t('users.notifications.friendships'),
