--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -3,12 +3,13 @@
 
 #sidebar
   @extend .clearfix
-  float: left
   font-size: 12px
   width: 300px
-  margin-right: -100%
-  position: relative
-  margin-left: 10px
+  position: fixed
+  margin-left: 610px
+
+#sidebar-scroll
+  +border-radius(4px)
 
 //
 // Overrides => Call to action.
