--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -53,3 +53,58 @@
       display: block
       margin-bottom: 10px
       line-height: 14px
+
+
+// Plan detail/about page
+
+#main article.reading_plan_index
+  padding: 0
+
+  a,
+  p,
+  span,
+  div
+    box-sizing: border-box
+
+  .keep
+    padding: 30px 30px 20px
+    margin: 0
+    border-bottom: 1px solid #deddbd
+    font-size: 30px
+
+  p
+    padding: 15px 30px
+
+  .rp-plan-info
+    background: image-url("icon_calendar@2x.png") no-repeat 30px center
+    background-size: 13px 15px
+    border-bottom: 1px solid #dedddb
+    padding: 5px 55px
+
+    p
+      margin: 0
+      padding: 0
+
+  .rp-plan-about
+    padding: 20px 30px
+    border-bottom: 1px solid #dedddb
+
+    .rp-plan-about-buttons
+      overflow: hidden
+
+    .action_button_green
+      margin: 0 0 10px 0
+
+    p
+      padding: 0
+      margin: 30px 0 0
+      clear: both
+
+  .mobile
+    padding: 0 0 15px
+
+    p
+      margin: 0
+
+    a
+      padding: 0 30px 20px
