--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -20,13 +20,13 @@
     %p
       30 days
 
-  - # Add fancy Ruby code here
   .rp-plan-about
     .rp-plan-about-buttons
-      %a{href:"#", class: 'action_button_green'}
-        Start this plan
-      %a{href:"#", class: 'action_button_dark_grey'}
-        View a sample reading
+      - if logged_in?
+        = render partial: "/plans/button", locals: {plan: @plan}
+      - else
+        = link_to t('plans.subscribe to plan'), sign_up_path(source: "plan", id: @plan.id, redirect: request.fullpath), class: "action_button_green"
+        = link_to t("plans.view sample"), {day: 1.to_s}, {class: 'action_button_dark_grey'}
 
     %p= @plan.about
 
