Article background-image

--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -13,9 +13,7 @@
   %meta{name: "twitter:image",            content: "#{url_for(asset_path('Bible-app-icon-english-120x120.png'))}"}
   %meta{name: "twitter:site",             content: "@YouVersion"}
 
-%article.reading_plan_index
-  - if @plan.hero_image.present?
-    = image_tag @plan.hero_image.url, class: 'hero_image'
+%article.reading_plan_index{style: "background-image: url('#{@plan.hero_image.url if @plan.hero_image.present?}');"}
   %h1.keep= @plan.name
 
   .rp-plan-info
