Styled up the start plan options on the plan about page

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -111,3 +111,24 @@
       margin: 15px 0 0
       clear: both
 
+  .plan-privacy-buttons
+    display: none
+    overflow: hidden
+    clear: both
+    width: 265px
+
+    .detail-text
+      text-align: center
+      margin-bottom: 15px
+      font-weight: bold
+      line-height: 1.4em
+
+    .button-private,
+    .button-public
+      width: 125px
+
+    .button-private
+      float: right
+
+    .button-public
+      float: left
