--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -97,8 +97,28 @@
 
     p
       padding: 0
-      margin: 30px 0 0
+      margin: 10px 0 0
       clear: both
+
+
+#main article.reading_plan_index
+
+  .plan-privacy-buttons
+    display: none
+    background: #fff
+    overflow: auto
+
+    .detail-text
+      font-size: 15px
+      text-align: center
+      margin-bottom: 15px
+      font-weight: bold
+      line-height: 1.4em
+
+    .button-public,
+    .button-private
+      display: block
+      margin-bottom: 10px
 
   .mobile
     padding: 0 0 15px
