Styled the hero image in RP about pages

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -61,3 +61,13 @@
       display: block
       margin-bottom: 10px
       line-height: 14px
+
+
+// Plan about page
+
+#main article.reading_plan_index
+  background-size: 600px
+  background-repeat: no-repeat
+
+  h1.keep
+    margin-top: 333px
