--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -53,3 +53,13 @@
       display: block
       margin-bottom: 10px
       line-height: 14px
+
+
+// Plan about page
+
+#main article.reading_plan_index
+  background-size: 100%
+  background-repeat: no-repeat
+
+  h1.keep
+    margin-top: 64%
