--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -63,10 +63,11 @@
       line-height: 14px
 
 
-// Plan detail/about page
+// Plan about page
 
 #main article.reading_plan_index
-  padding: 0
+  background-size: 600px
+  background-repeat: no-repeat
 
   a,
   p,
@@ -74,8 +75,9 @@
   div
     box-sizing: border-box
 
-  .keep
+  h1.keep
     padding: 30px 30px 20px
+    margin-top: 333px
     margin: 0
     border-bottom: 1px solid #deddbd
 
