--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -55,10 +55,12 @@
       line-height: 14px
 
 
-// Plan detail/about page
+// Plan about page
 
 #main article.reading_plan_index
+  background-size: 100%
   padding: 0
+  background-repeat: no-repeat
 
   a,
   p,
@@ -66,9 +68,10 @@
   div
     box-sizing: border-box
 
+  h1.keep
   .keep
     padding: 30px 30px 20px
-    margin: 0
+    margin-top: 64%
     border-bottom: 1px solid #deddbd
     font-size: 30px
 
