--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -70,9 +70,10 @@
 
   h1.keep
   .keep
-    padding: 30px 30px 20px
+    padding: 0px 30px 20px
+    margin: 0
     margin-top: 64%
-    border-bottom: 1px solid #deddbd
+    border-bottom: 1px solid #dedddb
     font-size: 30px
 
   p
