--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -68,7 +68,7 @@
 #main article.reading_plan_index
   background-size: 600px
   background-repeat: no-repeat
-
+  padding: 0
   a,
   p,
   span,
@@ -77,9 +77,9 @@
 
   h1.keep
     padding: 30px 30px 20px
-    margin-top: 333px
     margin: 0
-    border-bottom: 1px solid #deddbd
+    margin-top: 333px
+    border-bottom: 1px solid #dedddb
 
   p
     padding: 15px 30px
