--- a/app/views/plans/_list_item.html.haml
+++ b/app/views/plans/_list_item.html.haml
@@ -5,6 +5,7 @@
 
   plan = list_item
 %li.plan
+  = image_tag plan.search_thumbnail_image.url, class: 'search_thumbnail' if plan.search_thumbnail_image.present?
   %h3
     = link_to(plan.name, plan_path(plan, locale: original_locale))
   %span.length
