Pulled RP hero images out of the background

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -66,19 +66,22 @@
 // Plan about page
 
 #main article.reading_plan_index
-  background-size: 600px
-  background-repeat: no-repeat
   padding: 0
+  overflow: hidden
+
   a,
   p,
   span,
   div
     box-sizing: border-box
 
+  .rp-hero-img
+    width: 600px
+
+
   h1.keep
     padding: 30px 30px 20px
     margin: 0
-    margin-top: 333px
     border-bottom: 1px solid #dedddb
 
   p
