--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -58,9 +58,7 @@
 // Plan about page
 
 #main article.reading_plan_index
-  background-size: 100%
   padding: 0
-  background-repeat: no-repeat
 
   a,
   p,
@@ -68,11 +66,12 @@
   div
     box-sizing: border-box
 
+  .rp-hero-img
+    width: 100%
+
   h1.keep
-  .keep
-    padding: 0px 30px 20px
+    padding: 20px 30px 20px
     margin: 0
-    margin-top: 64%
     border-bottom: 1px solid #dedddb
     font-size: 30px
 
