--- a/app/views/plans/_button.html.haml
+++ b/app/views/plans/_button.html.haml
@@ -7,6 +7,7 @@
       = link_to(t('plans.read today'), subscription_path(user_id: current_user.to_param,id: plan.to_param), id: "subscription-read", class: 'action_button_green')
     - else
       = link_to(t('plans.subscribe to plan'),"#", id: "subscription-start", class: 'action_button_green', "data-toggle-trigger" => "true", "data-toggle-target" => "#toggle-#{unique_id}" )
+      = link_to t("plans.view sample"), {day: "1"}, {class: 'action_button_dark_grey'}
       .plan-privacy-buttons{id: "toggle-#{unique_id}"}
         %p.detail-text
           = t("plans.privacy.visible to friends?")
@@ -15,3 +16,5 @@
         = link_to(t('ui.no button'), subscribe_private_url.call(true), class:"action_button_grey button-private", method: :post)
   - else
     = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: plan.id, redirect: plan_path(plan)), class: 'action_button_green')
+    = link_to t("plans.view sample"), {day: "1"}, {class: 'action_button_dark_grey'}
+
