Fixed borked RP day view subscription stuff

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -137,3 +137,15 @@
 
     .button-public
       float: left
+
+// Plan day view
+
+#sidebar
+  .rp-subscription-info
+
+    .action_button_green
+      margin: 0 0 10px
+
+    .action_button_dark_grey,
+    .plan-privacy-buttons
+      display: none
