Added styling to RP day view subscription privacy options

--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -131,3 +131,42 @@
 
     a
       padding: 0 30px 20px
+
+
+// Plan day view
+
+#sidebar
+  .rp-subscription-info
+    padding: 15px 20px 0
+
+    div,
+    a,
+    span
+      box-sizing: border-box
+
+    .action_button_green
+      margin: 0 0 15px
+
+    .action_button_dark_grey,
+    .plan-privacy-buttons
+      display: none
+
+    .plan-privacy-buttons
+      overflow: hidden
+
+    .detail-text
+      font-size: 15px
+      font-weight: bold
+      text-align: center
+      padding: 0 15px
+      line-height: 1.4em
+      margin-bottom: 10px
+
+    .button-public,
+    .button-private
+      float: left
+      width: 47%
+      margin: 0 0 10px
+
+    .button-public
+      margin: 0 6% 0 0
