--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -142,6 +142,12 @@
 
 #sidebar
   .rp-subscription-info
+    overflow: hidden
+
+    div,
+    a,
+    span
+      box-sizing: border-box
 
     .action_button_green
       margin: 0 0 10px
@@ -149,3 +155,20 @@
     .action_button_dark_grey,
     .plan-privacy-buttons
       display: none
+
+    .detail-text
+      font-size: 15px
+      font-weight: bold
+      text-align: center
+      padding: 0 15px
+      line-height: 1.4em
+      margin-bottom: 10px
+
+    .button-public,
+    .button-private
+      float: left
+      width: 140px
+      margin: 0 0 10px
+
+    .button-public
+      margin: 0 10px 0 0
