--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -27,7 +27,7 @@
           %ul
             - @video.references.each do |ref|
               %li= link_to(ref.human, bible_path(Reference.new(ref.usfm, version: current_version)))
-      %p.description= @video.description.html_safe
+      %p.description= @video.description.html_safe if @video.description.present?
 
     #other
       - video_series = client_settings.video_series
