Styled thumbnails images in RP section

--- a/app/assets/stylesheets/_progress_bars.sass
+++ b/app/assets/stylesheets/_progress_bars.sass
@@ -5,7 +5,7 @@
 .progress_bar_outer,
 .progress_bar,
 .progress_bar_shadow
-  height: 27px
+  height: 15px
 
 .progress_bar_outer,
 .progress_bar,
@@ -26,11 +26,10 @@
 .progress_counter
   text-align: center
   width: 180px
-  height: 39px
-  line-height: 38px
   position: absolute
-  top: 0
+  top: 3px
   right: 0
+  font-size: 12px
 
 .progress_bar_outer
   background-color: #f9f9f9
@@ -58,7 +57,6 @@
 // bar would overflow with a hard 90 degree
 // right edge, in WebKit and Opera. Booh! :(
 .progress_bar_cap
-  background: image-url("progress_bar_cap.png") no-repeat
   width: 13px
   height: 29px
   position: absolute
