--- a/app/views/subscriptions/index.html.haml
+++ b/app/views/subscriptions/index.html.haml
@@ -19,9 +19,11 @@
       - @subscriptions.each do |sub|
         %li.subscription
           .subscription-info
-            = image_tag sub.search_thumbnail_image.url, class: 'subscription_thumbnail' if sub.search_thumbnail_image.present?
-            %h3
-              = link_to(sub.name, subscription_path(user_id: @user.to_param, id: sub, initial: 'true'), class: "subscription-title")
+            %span.search_thumbnail
+              = image_tag sub.search_thumbnail_image.url, class: 'subscription_thumbnail' if sub.search_thumbnail_image.present?
+            = link_to(subscription_path(user_id: @user.to_param, id: sub, initial: 'true'), class: "subscription-title") do
+              %h3
+                =t(sub.name)
             %span.subscription-privacy
               = sub.private ? t("plans.privacy.private") : t("plans.privacy.public")
               •
