YV-2407 app page language count so strings don't need updated when count changes

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -25,7 +25,7 @@
     %section.multilingual
       = image_tag "mobile_multilingual.png"
       %h3= t('mobile page.h3')
-      %p= t('mobile page.h3 sub')
+      %p= t('mobile page.h3 sub', language_count: 700)
   %section#mobile_downloads
     %h3= t('mobile page.download now')
     %ul.left_column
