--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -331,14 +331,15 @@
 #widget-download
   .bd
     background:
-      image: image-url("ad_bible_app.png")
-      position: 92% 80%
+      image: image-url("ad_bible_platforms.png")
+      position: 96% 84%
       repeat: no-repeat
 
     h3
       margin-bottom: 1.3em
     p
       margin-bottom: 10px
+      padding-right: 75px
 
     .action_button_green
       padding: 7px 10px
