Transparent scripture widget

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -358,6 +358,7 @@
 // !Reading plan widget --------------
 
 #widget-plan-controls
+
   .hd
     .settings
       display: block
@@ -500,6 +501,7 @@
 
 .scripture-links
   .menu
+    background: transparent
     li.content_target
       position: relative
     form
