YV-1655 right side widget and app page icon i18n

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -75,6 +75,11 @@
     width: 50%
     float: left
 
+  .multi
+    background: image-url("mobile_multilingual.png") top center no-repeat #fff
+    width: 160px
+    height: 97px
+
 #mobile_content h2
   font-weight: 200
   font-size: 40px
