--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -41,10 +41,11 @@
   float: right
   width: 60%
 
-#mobile_content .multilingual
-  width: 40%
+#mobile_content .multi
+  width: 100%
   float: left
-
+  background: image-url("mobile_multilingual.png") top center no-repeat #fff
+  height: 97px
 
 #main article.mobileapps
   font-size: 13px
