YV-2467 - fix button background display for mobile screen on apps page

--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -150,6 +150,7 @@
     +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
     overflow: hidden
     clear: both
+    background-size: 30px
 
   img
     display: none
