--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -441,7 +441,7 @@ dd .icon_settings
   border: 1px #d5d0d0 solid
   border-collapse: collapse
   font-size: 12px
-  height: 35px
+  height: 45px
   width: 35px
 
 .cal_month td a
@@ -449,15 +449,15 @@ dd .icon_settings
   color: #888
   font-weight: bold
   text-decoration: none
-  padding: 4px 7px 5px 7px
+  padding: 4px 0 0
   display: block
+  height: 41px
 
 .cal_month tr
   border-collapse: collapse
 
 .cal_month td.disabled
   background: #e9e9e9
-  box-shadow: 0px 1px 0px #f5f5f5 inset
 
 .cal_month td.today
   background: #fff
@@ -468,7 +468,8 @@ dd .icon_settings
 
 .cal_month td.read
   font-weight: bold
-  background: image-url("cal_check.png") no-repeat center 23px
+  background: image-url("cal_check@2x.png") no-repeat center 27px
+  background-size: 11px 8px
 
 .cal_month td.read a
   color: #888
@@ -482,7 +483,8 @@ dd .icon_settings
   height: 24px
 
 .cal_month .active-day a
-  background: image-url("cal_bullet.png") center 23px no-repeat
+  background: image-url("cal_bullet@2x.png") no-repeat center 27px
+  background-size: 8px 8px
 
 .cal_month .hidden
   height: 35px
