--- a/app/assets/stylesheets/mobile/_ui_elements.sass
+++ b/app/assets/stylesheets/mobile/_ui_elements.sass
@@ -450,23 +450,20 @@ dd .icon_settings
   td
     text-align: center
     border-collapse: collapse
-    font-size: 12px
-    width: 35px
+    font-size: 13px
     border: 1px solid #e1e1e1
     vertical-align: middle
     height: 44px
     box-shadow: none
 
     a
-      font-size: 12px
+      font-size: 13px
       color: #888
       font-weight: bold
       text-decoration: none
-      padding: 4px 7px 5px 7px
+      padding: 4px 0 0
       display: block
       height: 44px
-      display: block
-      line-height: 44px
 
 .cal_month
   tr
@@ -474,7 +471,6 @@ dd .icon_settings
 
   td.disabled
     background: #e9e9e9
-    box-shadow: 0px 1px 0px #f5f5f5 inset
 
   td.today
     background: #fff
@@ -485,7 +481,8 @@ dd .icon_settings
 
   td.read
     font-weight: bold
-    background: image-url("cal_check.png") no-repeat right top
+    background: image-url("cal_check@2x.png") no-repeat center 29px
+    background-size: 11px 8px
 
     a
       color: #888
@@ -494,12 +491,13 @@ dd .icon_settings
   td .inactive-day
     color: #aaa
     background-image: none
-    padding: 4px 0 5px 0px
+    padding: 4px 0 0
     display: block
-    height: 24px
+    height: 44px
 
   .active-day a
-    background: image-url("cal_bullet.png") center 36px no-repeat
+    background: image-url("cal_bullet@2x.png") center 29px no-repeat
+    background-size: 8px 8px
 
   .hidden
     height: 35px
