--- a/app/views/sidebars/plans/_show.html.haml
+++ b/app/views/sidebars/plans/_show.html.haml
@@ -1,6 +1,7 @@
 // Local parameters
 // presenter: Presenter::Sidebar::Plan
 - plan = presenter.plan
+- content_for :sidebar_class, 'plan'
 
 .widget
   %h3.hd
